k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gke-learning
  labels:
    name: gke-learning
    purpose: learning-kubernetes
